# signature-extraction

./: .gitignore  .gitlab-ci.yml  README.md  annotated.html  classes.html  classsignature__extraction_1_1application__layer_1_1ApplicationLayer_1_1ApplicationLayer-members.html  classsignature__extraction_1_1application__layer_1_1ApplicationLayer_1_1ApplicationLayer.html  classsignature__extraction_1_1application__layer_1_1ApplicationLayer_1_1ApplicationLayer__inherit__graph.map  classsignature__extraction_1_1application__layer_1_1ApplicationLayer_1_1ApplicationLayer__inherit__graph.md5  classsignature__extraction_1_1application__layer_1_1CoAP_1_1CoAP-members.html  classsignature__extraction_1_1application__layer_1_1CoAP_1_1CoAP.html  classsignature__extraction_1_1application__layer_1_1CoAP_1_1CoAP_1_1CoAPType-members.html  classsignature__extraction_1_1application__layer_1_1CoAP_1_1CoAP_1_1CoAPType.html  classsignature__extraction_1_1application__layer_1_1CoAP_1_1CoAP_1_1CoAPType__inherit__graph.map  classsignature__extraction_1_1application__layer_1_1CoAP_1_1CoAP_1_1CoAPType__inherit__graph.md5  classsignature__extraction_1_1application__layer_1_1CoAP_1_1CoAP__coll__graph.map  classsignature__extraction_1_1application__layer_1_1CoAP_1_1CoAP__inherit__graph.md5  classsignature__extraction_1_1application__layer_1_1DHCP_1_1DHCP-members.html  classsignature__extraction_1_1application__layer_1_1DHCP_1_1DHCP.html  classsignature__extraction_1_1application__layer_1_1DHCP_1_1DHCP__coll__graph.map  classsignature__extraction_1_1application__layer_1_1DHCP_1_1DHCP__inherit__graph.md5  classsignature__extraction_1_1application__layer_1_1DNS_1_1DNS-members.html  classsignature__extraction_1_1application__layer_1_1DNS_1_1DNS.html  classsignature__extraction_1_1application__layer_1_1DNS_1_1DNS__inherit__graph.map  classsignature__extraction_1_1application__layer_1_1DNS_1_1DNS__inherit__graph.md5  classsignature__extraction_1_1application__layer_1_1HTTP_1_1HTTP-members.html  classsignature__extraction_1_1application__layer_1_1HTTP_1_1HTTP.html  classsignature__extraction_1_1application__layer_1_1HTTP_1_1HTTP__coll__graph.md5  classsignature__extraction_1_1application__layer_1_1HTTP_1_1HTTP__inherit__graph.map  classsignature__extraction_1_1network_1_1BaseFlow_1_1BaseFlow-members.html  classsignature__extraction_1_1network_1_1BaseFlow_1_1BaseFlow.html  classsignature__extraction_1_1network_1_1BaseFlow_1_1BaseFlow__inherit__graph.map  classsignature__extraction_1_1network_1_1BaseFlow_1_1BaseFlow__inherit__graph.md5  classsignature__extraction_1_1network_1_1FlowFingerprint_1_1FlowFingerprint-members.html  classsignature__extraction_1_1network_1_1FlowFingerprint_1_1FlowFingerprint.html  classsignature__extraction_1_1network_1_1FlowFingerprint_1_1FlowFingerprint__coll__graph.map  classsignature__extraction_1_1network_1_1FlowFingerprint_1_1FlowFingerprint__coll__graph.md5  classsignature__extraction_1_1network_1_1Flow_1_1Flow-members.html  classsignature__extraction_1_1network_1_1Flow_1_1Flow.html  classsignature__extraction_1_1network_1_1Flow_1_1Flow__coll__graph.map  (+38 more)
demo/: 1724060053.pcap  act.txt  act_full.txt  file.pcap
scripts/: arg_types.py  constants.py  domain_extractor.py  fingerprint.py  main.py  packet_translator.py  packet_utils.py  pattern.py  pattern_detection.py  pattern_utils.py  pkt_repr_extractor.py  signature_extractor.py  stream_identificator.py  stream_identifier.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+4 more)
(+65 files in other folders)
