[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "signature-extraction"
version = "1.0.7"
description = "Extract signatures from IoT event network traffic"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["network", "traffic", "fingerprinting", "firewall"]
authors = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker+github@proton.me" }
]
maintainers = [
  {name = "François De Keersmaeker", email = "francois.dekeersmaeker+github@proton.me" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Pick your license as you wish
  #"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",

  "Operating System :: OS Independent"
]

dependencies = [
  # Libraries
  "cryptography==45.0.6",
  "scapy==2.6.1",
  "pandas==2.3.2",
  "Levenshtein==0.27.1",
  # Custom
  "dns-unbound-cache-reader",
  "profile-translator-blocklist"
]

[project.urls]
"Homepage" = "https://github.com/smart-home-network-security/signature-extraction"
"Source" = "https://github.com/smart-home-network-security/signature-extraction"
